# virtual-usb-printer

./: BUILD.gn  CPPLINT.cfg  OWNERS  PRESUBMIT.cfg  README.md  cups_constants.cc  cups_constants.h  device_descriptors.cc  device_descriptors.h  escl_manager.cc  escl_manager.h  escl_manager_test.cc  http_util.cc  http_util.h  http_util_test.cc  ipp_manager.cc  ipp_manager.h  ipp_manager_test.cc  ipp_test.cc  ipp_util.cc  ipp_util.h  ipp_util_test.cc  load_config.cc  load_config.h  load_config_test.cc  op_commands.cc  op_commands.h  server.cc  server.h  smart_buffer.cc  smart_buffer.h  smart_buffer_test.cc  usb_printer.cc  usb_printer.h  usbip.cc  usbip.h  usbip_constants.h  value_util.cc  value_util.h  virtual_usb_printer.cc  (+3 more)
config/: escl_capabilities.json  ipp_attributes.json  ippusb_printer.json  usb_printer.json
tools/: generate_ipp.py
